weather data on the bases of city

--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
 
 
     </header>
+     
+    <main class="layout flex flex-col">
+
+
+
+        <!-- WEATHER BASED ON CITY -->
+        <section class="city-weather">
+            <div class="flex flex-col card">
+                <h1 class="city"><b></b></h1>
+
+                <img src="" class="weather-icon">
+                <p class="flex"><img src="temperature.svg">Temperature :<span class="temp"></span></p>
+                <p class="flex"><img src="humidity.svg">Humidity :<span class="humidity"></span></p>
+                <p class="flex"><img src="wind.svg">Wind Speed :<span class="wind"></span></p>
+            </div>
+        </section>
+
 
 
 </body>
