--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
             </div>
         </section>
 
+         <!-- 5-DAYS WEATHER FORECAST -->
+        <section class="dayforecast">
+            <div class="flex justify-evenly fore">
+                <!-- DAY1 -->
+                <div class="info">
+                    <img src="" class="forcasticon-1">
+                    <p class="date1"></p>
+                    <p class="flex flex-row"><img src="temperature.svg" class="icons">Temperature :<span
+                            class="temperature1"></span></p>
+                    <p class="flex flex-row"><img src="humidity.svg" class="icons">Humidity :<span
+                            class="humid1"></span>
+                    </p>
+                    <p class="flex flex-row"><img src="wind.svg" class="icons">Wind Speed :<span
+                            class="windair1"></span>
+                    </p>
+                </div>
+
 
 
 </body>
