--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
                     </p>
                 </div>
 
+                <!-- DAY2 -->
+                <div class="info">
+                    <img src="" class="forcasticon-2">
+                    <p class="date2"></p>
+                    <p class="flex flex-row"><img src="temperature.svg" class="icons">Temperatur :<span
+                            class="temperature2"></span></p>
+                    <p class="flex flex-row"><img src="humidity.svg" class="icons">Humidit :<span class="humid2"></span>
+                    </p>
+                    <p class="flex flex-row"><img src="wind.svg" class="icons">Wind Spee :<span class="windair2"></span>
+                    </p>
+
+                </div>
+
 
 
 </body>
