--- a/index.html
+++ b/index.html
@@ -75,8 +75,20 @@
                     </p>
 
                 </div>
+             <!-- DAY3 -->
+                <div class="info">
+                    <img src="" class="forcasticon-3">
+                    <p class="date3"></p>
+                    <p class="flex flex-row"><img src="temperature.svg" class="icons">Temperature :<span
+                            class="temperature3"></span></p>
+                    <p class="flex flex-row"><img src="humidity.svg" class="icons">Humidity :<span
+                            class="humid3"></span>
+                    </p>
+                    <p class="flex flex-row"><img src="wind.svg" class="icons">Wind Speed :<span
+                            class="windair3"></span>
+                    </p>
 
-
+                </div>
 
 </body>
 </html>
