the reset days are added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,35 @@
                     </p>
 
                 </div>
+ <!-- DAY4 -->
+                <div class=" info">
+                    <img src="" class="forcasticon-4">
+                    <p class="date4"></p>
+                    <p class="flex flex-row"><img src="temperature.svg" class="icons">Temperatur :<span
+                            class="temperature4"></span></p>
+                    <p class="flex flex-row"><img src="humidity.svg" class="icons">Humidit :<span class="humid4"></span>
+                    </p>
+                    <p class="flex flex-row"><img src="wind.svg" class="icons">Wind Spee :<span class="windair4"></span>
+                    </p>
 
+                </div>
+                 <!-- DAY5 -->
+                <div class="info">
+                    <img src="" class="forcasticon-5">
+                    <p class="date5"></p>
+                    <p class="flex flex-row"><img src="temperature.svg" class="icons">Temperatur :<span
+                            class="temperature5"></span></p>
+                    <p class="flex flex-row"><img src="humidity.svg" class="icons">Humidit :<span class="humid5"></span>
+                    </p>
+                    <p class="flex flex-row"><img src="wind.svg" class="icons">Wind Spee :<span class="windair5"></span>
+                    </p>
+                </div>
+            </div>
+        </section>
+         </main>
+  
+  
+
+    <script src="index.js"></script>
 </body>
 </html>
