index html file

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEATHER APP by palak lulla</title>
+    <title>WEATHER APP</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="index.css">
+
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         </select>
 
         <input type="text" placeholder="Search for the city" class="search-input" id="cityInput"></input>
-        <button class="search-btn ">Search</button>
+        <button class="search-btn " >Search</button>
         <button on click="useCurrentLocation()">Use current location</button>
 
         <h3>Recent Searches</h3>
@@ -31,7 +32,7 @@
 
 
     </header>
-
+    
     <main class="layout flex flex-col">
 
 
@@ -64,7 +65,6 @@
                             class="windair1"></span>
                     </p>
                 </div>
-
                 <!-- DAY2 -->
                 <div class="info">
                     <img src="" class="forcasticon-2">
@@ -116,7 +116,10 @@
                 </div>
             </div>
         </section>
+
     </main>
+  
+  
 
     <script src="index.js"></script>
 </body>
